<resources>
    <string name="app_name">7walek</string>
    <string name="facebook_app_id">323172838043912</string>
    <string name="fb_login_protocol_scheme">fb323172838043912</string>
    <string name="or">____________________أو___________________</string>

    <!--              WorkerCompleteProfile       -->
    <string name="tv_name_label">الاسم</string>
    <string name="tv_address_label">العنوان</string>
    <string name="hint_name">الاسم</string>
    <string name="tv_number_label">رقم المحمول</string>
    <string name="tv_profession_label">المهنه</string>
    <string name="tv_years_label">سنوات الخبره</string>
    <string name="btn_id_label">البطاقه القوميه</string>
    <string name="btn_done_label">حفظ</string>
    <string name="btn_login_label">تسجيل الدخول</string>
    <string name="title_activity_user_profile">طلباتى</string>
    <string name="title_activity_complete_profile">بياناتي</string>
    <string name="title_activity_add_request">اضافة طلب</string>
    <string name="action_settings">اعدادات</string>
    <string name="msg_dialog_title">جارى انشاء حساب جديد</string>
    <string name="msg_dialog_wait">يرجى الانتظار</string>
    <string name="msg_empty_request">لا يوجد طلبات حاليه</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_tab_user_requests">الطلبات الحاليه</string>
    <string name="title_tab_user_history">الطلبات السابقه</string>
    <string name="txt_dummy">القرية الذكية , مبني وزارة الاتصالات</string>
    <string name="short_desc">استطيع تنفيذ الوظيفه بكفاءه عاليه و مبلغ فى متناول اليد</string>
    <string name="request_desc">تصليح كرسى رجله مكسوره فى اسرع وقت</string>
    <string name="dummy_name">احمد عبد العاطى</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="profile">الصفحه الشخصيه</string>
    <string name="client">طالب خدمه</string>
    <string name="worker">صاحب حرفه</string>
    <string name="Description">تفاصيل الطلب</string>
    <string name="profession">نوع الحرفه</string>
    <string name="order">طلب</string>
    <string name="dummy_address">الحى السادس 6 اكتوبر</string>
    <string name="offered_price">السعر المعروض</string>
    <string name="decline_worker">غير موافق</string>
    <string name="accept_worker">موافق</string>
    <string name="title_activity_worker_home">الشغل القريب</string>
    <string name="title_activity_worker_request_details">التفاصيل</string>
    <string name="done">تم</string>
    <string name="comment">تعليق</string>

    <!-- shared preference section -->
    <string name="pref_access_token">user_token</string>

    <string name="pref_client_name">name</string>
    <string name="pref_client_phone">phone</string>
    <string name="pref_client_photo">photo</string>
    <string name="pref_client_lat">lat</string>
    <string name="pref_client_lng">lng</string>
    <string name="pref_client_address">address</string>

    <string name="pref_worker_name">w_name</string>
    <string name="pref_worker_phone">w_phone</string>
    <string name="pref_worker_photo">w_photo</string>
    <string name="pref_worker_lat">w_lat</string>
    <string name="pref_worker_lng">w_lng</string>
    <string name="pref_worker_address">w_address</string>


    <string name="pref_my_profession">profession</string>
    <string name="pref_extra_job_key">job_key</string>
    <string name="pref_client_token">c_token</string>
    <string name="pref_worker_token">w_token</string>


    <!-- menu titles -->
    <string name="menu_title_setting">اعدادات</string>
    <string name="menu_title_profile">الملف الشخصى</string>
    <string name="meun_title_logout">خروج</string>
    <string name="err_name">من فضلك ادخل اسمك</string>
    <string name="err_tel">من فضلك ادخل رقم الهاتف</string>
    <string name="err_profession">من فضلك ادخل المهنه</string>
    <string name="err_exp">من فضلك ادخل سنوات الخبره</string>


    <string name="extras_user">user_info</string>



</resources>
