<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mal.a7walek.screens.WorkerOfferHelp"
    android:background="@drawable/pattern_offer_help">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/worker_offer_price"
        android:layout_marginTop="30dp"
        android:drawableRight="@drawable/money_bag_icon"
        android:textColor="#ffffff"
        android:background="@drawable/textbox"
        android:hint="@string/offered_price"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/worker_offer_description"
        android:layout_below="@+id/worker_offer_price"
        android:layout_marginTop="30dp"
        android:background="@drawable/textbox"
        android:drawableRight="@drawable/desc_icon"
        android:textColor="#ffffff"
        android:hint="@string/comment"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/worker_offer_done"
        android:layout_below="@+id/worker_offer_description"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/done"
        android:textColor="#ffffff"
        android:textSize="12pt"
        android:background="@drawable/done"/>



</RelativeLayout>
