<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mal.a7walek.screens.WorkerRequestDetails"
    tools:showIn="@layout/activity_worker_request_details"
    android:background="#ffffff">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/detailed_client_image"
            android:layout_alignParentRight="true"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detailed_client_name"
            android:layout_toLeftOf="@+id/detailed_client_image"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/dummy_name"
            android:textSize="12pt"
            android:textColor="#000000"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/detailed_client_address"
            android:layout_toLeftOf="@+id/detailed_client_image"
            android:layout_below="@+id/detailed_client_name"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/dummy_address"
            android:textSize="12pt"
            android:textColor="#000000"
            android:drawableRight="@drawable/address_icon"
            />
    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/detailed_request_image"
        android:layout_marginTop="30dp"
        android:src="@drawable/home_background"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/detailed_client_description"
        android:text="@string/request_desc"
        android:layout_marginTop="30dp"
        android:textSize="12pt"
        android:textColor="#000000"/>


</LinearLayout>
