<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".screens.ClientAddRequest"
    android:orientation="vertical"
    android:background="@drawable/pattern_holderrequestview">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:id="@+id/request_upload_image"
                android:src="@drawable/image"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:src="@drawable/camera"
                android:id="@+id/upload"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:id="@+id/request_add_desc"
                android:drawableRight="@drawable/desc_icon"
                android:hint="@string/Description"
                android:background="@drawable/textbox"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:id="@+id/request_add_category"
                android:drawableRight="@drawable/category_icon"
                android:hint="@string/profession"
                android:background="@drawable/textbox"
                />

            <Button
                android:id="@+id/btn_publish_request"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:text="@string/order"
                android:background="@drawable/add_btn"
                android:textColor="#FFFFFF"
                android:textSize="15pt"
                android:textStyle="bold"
                />


        </LinearLayout>

    </ScrollView>


</LinearLayout>
